--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -7,7 +7,7 @@
     --green: #16a085;
     --yellow: #f29c50;
     --pink: #f68aa2;
-    --purple: #B799FF;
+    --purple: #9b59b6;
 } 
 
 :root[saved-theme=dark] {
