--- a/quartz/components/styles/graph.scss
+++ b/quartz/components/styles/graph.scss
@@ -7,13 +7,17 @@
   }
 
   & > .graph-outer {
-    border-radius: 5px;
+    border-radius: 7px;
     border: 1px solid var(--lightgray);
     box-sizing: border-box;
     height: 250px;
     margin: 0.5em 0;
     position: relative;
     overflow: hidden;
+
+    & > #graph-container {
+      background-color: var(--lightgray);
+    }
 
     & > #global-graph-icon {
       color: var(--dark);
